[package]
name = "tiny_lib"
authors = ["q2p"]
version = "0.0.1"
edition = "2018"
publish = true
description = "A tiny library, that implements some useful math functions to be used in no_std projects."
license = "CC0-1.0"
homepage = "https://github.com/q2p/tiny_lib"
repository = "https://github.com/q2p/tiny_lib"
keywords = ["sin", "cos", "vector", "math"]
categories = ["no-std"]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
lto = true
codegen-units = 1
incremental = false
overflow-checks = false